--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <spring.version>5.2.2.RELEASE</spring.version>
+    <spring.version>5.2.1.RELEASE</spring.version>
     <hibernate.version>5.4.2.Final</hibernate.version>
-    <hibernate.validator>5.4.1.Final</hibernate.validator>
+    <hibernate.validator>5.4.2.Final</hibernate.validator>
     <jstl.version>1.2.1</jstl.version>
     <tld.version>1.1.2</tld.version>
     <servlets.version>3.1.0</servlets.version>
@@ -43,6 +43,33 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
+    </dependency>
+
+    <!-- Spring Security -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>${spring.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
 
     <!-- JSTL Dependency -->
