pre8 with EntityManager, no HibernateConfig

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.4.9.Final</version>
+    </dependency>
+
 
     <!-- Tomcat embedded container-->
     <dependency>
